HMI website update

--- a/girlseducation.html
+++ b/girlseducation.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Her Matter Initiative - HMI</title>
+	<title>Girls Education - HMI</title>
 	<meta name="description" content="HMI is a Non-Profit Organization that focuses on promoting Equal opportunities, access to education and healthcare, Leadership advancement and self-reliance for women and girls in Nigeria.">
   	<meta name="keywords" content="Women and Girls NGO in Niger State, Youth Organization in Niger State, Girls education in Niger State, Women and girls empowerment in Niger State, Women and Girls NGO in Nigeria, Youth Organization in Nigeria, Girls education in Nigeria, Women and girls empowerment in Nigeria">
   	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="css/fyn.css">
+	<link rel="stylesheet" type="text/css" href="css/girlseducation.css">
 </head>
 <body>
 	<header>
@@ -18,7 +18,7 @@
 					<span class="arrow">&#x25BC;</span>
 				</a>
 					<ul class="submenu">
-						<li><a href="#whowe">Who We Are</a></li>
+						<li><a href="index.html/#whowe">Who We Are</a></li>
 						<li><a href="#vision">Vision</a></li>
 						<li><a href="#mission">Mission</a></li>
 						<li><a href="#core">Core Values</a></li>
@@ -57,73 +57,15 @@
 						<li><a href="#">Volunteer</a></li>
 					</ul>
 				</li>
-				<li><a href="donate.html">Donate</a></li>
+				<li><a href="#">Donate</a></li>
 				<li><a href="#">News</a></li>
 				<li><a href="#">Blog</a></li>
 			</ul>
 		</nav>
-	<div class="grouppic">
-		<div class="hp">
-			<img src="images/fynlogopng.png">
-			<h1>Female Youths Network</h1>
-			<h2>HMI deliberate passion to build a community of employable and self-reliant youths</h2>			
-		</div>
-	</div>
+	<div class="girleducation">
+		<img src="images/girledu2.jpg" alt="girl">
 
-	<div class="plain">
-		<div class="plainB">		
-			<h1>Why Youths?</h1>
-			<p>When we think youth we think innovation,
-			the combination of youth and innovation generate the perfect spark to drive positive change. With the appopriate exposure to technology, education, skills and good health, a young woman can build her business and even employ the others, she can make the world a better place.</p>
-		</div>
-	</div>
-
-	<div class="aboutfyn">
-		<div class="aboutfyn1">
-			<img src="images/fynlogo.jpg">
-			<h1>Female Youths Network</h1>
-			<p>FYN has provided the platform to unite females from varied backgrounds and empower them to take charge of their lives and contribute to their community development. </p><br>
-			<p>The Fyn group is driven by its core goal of being the foremost social hub harnessing females' inherent potentials  and capabilities, promoting gender equality,  promotion of  females' leadership development and inclusion, and building females' self-esteem.</p>
-		</div>
-
-		<div class="aboutfyn2"><img src="images/FYN3.JPG"></div>
-		<div class="aboutfyn3">
-			<h1>Goal</h1>
-			<p>Our goal is to boost female youth capabilities towards 		advanced innovations and solutions to unemployment challenges.</p>
-			<h1 id="heading">Objectives</h1>
-			<p>To offer educational tools and packages of linguistically and culturally based programmes in form of skills, workshops/seminars and conferences that will better their lives of Nigerian female youths, amplify their voices and transform them in  them into community builders.</p><br>
-			<p>To provide a platform to unite women from varied backgrounds and all walks of life to exchange ideas, network and harmonize strategies for self-development.</p><br>
-			<p>To raise awareness, igniting dialogs and inspiring positive impact around human rights and fundamental freedoms of women and girls.</p><br>
-			<p>To participate in peace processes in troubled communities.</p>
-
-		</div>
-
-	</div>
-	
-	<div class="plain2">
-		<div class="plain2a">
-			<h1>Our<br>Uniqueness</h1>
-		</div>
-		<div class="plain2b">
-			<p>We deliver supports directly to the vulnerables<br> in hard-to-reach communities and rural areas.<br>We are deeply rooted in the grassroots,<br>we are highly connected to the grassroots,<br>we are grassroots force of change,<br>we are the grassroots.</p>
-		</div>
-	</div>
-
-	<div class="thematics">
-		<h1>Our Thematics</h1>
-	</div>
-
-	<div class="code">
-		<h1>Female<br>Youths<br>Network</h1> 
-		<h2><b>Innovation</b></h2>
-		<h3><b>CODE - ME</b></h3> 
-		<p>A social project that will provide female youths<br>with the technology, confidence, tools, knowledge<br>
-		and support to be creative about all they<br>need to start up their choice of businesses as<br>
-		successful self-employed entrepreneurs or to get the<br>job they want.</p>
-		<a href="codeme.html"><strong>Read more</strong></a>
-
-	</div>
-
+    </div>
 	<footer>
 		<div class="footercontainer">
 			<div class="littleabout">
