--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Her Matter Initiative - HMI</title>
 	<meta name="description" content="HMI is a Non-Profit Organization that focuses on promoting Equal opportunities, access to education and healthcare, Leadership advancement and self-reliance for women and girls in Nigeria.">
-  	<meta name="keywords" content="Women and Girls NGO in Niger State, Youth Organization in Niger State, Girls education in Niger State, Women and girls empowerment in Niger State">
+  	<meta name="keywords" content="Women and Girls NGO in Niger State, Youth Organization in Niger State, Girls education in Niger State, Women and girls empowerment in Niger State, Women and Girls NGO in Nigeria, Youth Organization in Nigeria, Girls education in Nigeria, Women and girls empowerment in Nigeria">
   	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
@@ -11,23 +11,61 @@
 	<header>
 		<img src="images/pnglogo2.png">
 		<h1>Welcome to HMI</h1>
-
-		<div class="HMInav">
-			<a href="#">About</a>
-			<a href="#">What We do</a>
-			<a href="fyn.html">Youth</a>
-			<a href="#">Projects</a>
-			<a href="#">Impacts</a>
-			<a href="#">Take Action</a>
-			<a href="#">Donate</a>
-			<a href="#">News</a>
-			<a href="#">Blog</a>
-		</div>
-	</header>
+	</header> 
+		<nav id="hminav">
+			<ul>
+				<li><a href="index.html">About
+					<span class="arrow">&#x25BC;</span>
+				</a>
+					<ul class="submenu">
+						<li><a href="#whowe">Who We Are</a></li>
+						<li><a href="#vision">Vision</a></li>
+						<li><a href="#mission">Mission</a></li>
+						<li><a href="#core">Core Values</a></li>
+					</ul>
+				</li>
+				<li><a href="#">What We do
+					<span class="arrow">&#x25BC;</span>
+				</a>
+					<ul class="submenu">
+						<li><a href="girlseducation.html">Girls Education</a></li>
+						<li><a href="#">Health</a></li>
+						<li><a href="#">Economic Empowerment</a></li>
+						<li><a href="#">Leadership</a></li>
+						<li><a href="#">Democracy</a></li>
+						<li><a href="#">Peace</a></li>
+					</ul>
+				</li>
+				<li><a href="fyn.html">Youth</a></li>
+				<li><a href="#">Projects
+					<span class="arrow">&#x25BC;</span>
+				</a>
+					<ul class="submenu">
+						<li><a href="#">PROG(Promotion of Girl Child Education</a></li>
+						<li><a href="#">CODE-ME</a></li>
+						<li><a href="#">HAP(Health Awareness Program)</a></li>
+						<li><a href="#">FLIP(Functional Literacy Program for Young Women)</a></li>
+					</ul>
+				</li>
+				<li><a href="hapimpacts.html">Impacts</a></li>
+				<li><a href="#">Take Action
+					<span class="arrow">&#x25BC;</span>
+				</a>
+					<ul class="submenu">
+						<li><a href="#">Partner</a></li>
+						<li><a href="#">Sponsor</a></li>
+						<li><a href="#">Volunteer</a></li>
+					</ul>
+				</li>
+				<li><a href="donate.html">Donate</a></li>
+				<li><a href="#">News</a></li>
+				<li><a href="#">Blog</a></li>
+			</ul>
+		</nav>
 	<div class="firstpic"> 
 		<div class="h1p">
 			<h1>INVESTING IN WOMEN AND GIRLS IS THE HEART OF OUR WORK</h1>>
-			<p>HMI is investing qualitative resources into ensuring that Nigerian women and<br>girls are empowered towards the actualization of the gender angle the the<br> Sustainable Development Goals (SDGs)</p>
+			<p>HMI is investing qualitative resources into ensuring that Nigerian women and<br>girls are empowered towards the actualization of the gender angle the UN<br> Sustainable Development Goals (SDGs)</p>
 		</div>
 		<div class="methonav">
 			<h id="learn">Learn about our methodologies:</h>
@@ -40,56 +78,134 @@
 	</div>
 	<div class="whywomen">
 		<h1>Why Women and Girls</h1>
-		<p>Empowering women and girls is the right thing to do. Investing in them is one of smartest thing to do in other to promote a healthier, more prosperous and developed society. There are no limitations to what a woman can do when given the rightful opportunities. When empowered, educated and healthy, she can take care of herself and her family, she can build her own business even employ others and she can be a nation builder instead of being a burden to it. Every woman is powerful; she is an agent of change, she can change the world and make it a better place for all.</p>
+		<p>Empowering women and girls is the right thing to do. Girls and women are always at the receiving end of gender discrimination, poverty, exploitation and vulnerable employment. Investing in them is one of smartest thing to do in other to promote a healthier, more prosperous and developed society. There are no limitations to what a woman can do when given the rightful opportunities. When empowered, educated and healthy, she can take care of herself and her family, she can builder own business even employ others and she can be a nation builder instead of being a burden to it. Every woman is powerful; she is an agent of change, she can change the world and make it a better place for all.</p>
 	</div>
 
 	<div class="about">
-		<div class="whowe">
+		<div id="whowe">
 			<h1>Who Whe Are</h1>
 			<p>HMI is a Non-Profit Organization that focuses on promoting Equal opportunities, access to education, safe healthcare, Leadership advancement and self-reliance for women and girls in Nigeria. Our strategic signature projects and programs are tailored to provide the women and girls with interventions, empowerment, opportunities, capacity building and trainings to build self-esteem to develop and transform their communities. Investing in women and girls is the heart of our work because we know that investing in them will generate a powerful ripple effect leading to a healthier, more prosperous and developed society.</p>
 		</div>
-		<div class="picwhowe">
+		<div id="picwhowe">
 			<!--<img class="picwhowe" src="Images/picwhowe.jpg">
- -->	</div>
+-->		</div>
 	</div>
 
 	<div class="about2">
-		<div class="picvision">
+		<div id="picvision">
 			<!--<img src="Images/pic3.jpg"> -->	
 		</div>
-		<div class="vision">
+		<div id="vision">
 			<h1><strong>Our Vision</strong></h1>
 			<p>HMI envisions an Africa of hope, social justice and equality, where women and girls, irrespective of ethnicity, religious background and social status are delibrately uplifted and empowered to reach their full potentials and live their dreams.</p>
 		</div>
 	</div>
 
 	<div class="about3">
-		<div class="mission">
+		<div id="mission">
 			<h1>Our Mission</h1>
 			<p>We are here to nurture and empower women and girls in Nigeria to take charge of their lives and make positive contributions to their communities.</p><br>
 			
 			<p>HMI acknowledges women and girls as 'Treasures' an indispensable facet of our dear continent. Therefore our passion to focus on women and girls is more than just a trend and it’s non-optional<strong>-its Mission Critical.</strong></p>
 		</div>
-		<div class="picmission">
+		<div id="picmission">
 			<!-- <img src="Images/pic4.jpg"> -->
 		</div>
 	</div>
 
 	<div class="about4">
-		<div class="piccore">
+		<div id="piccore">
 			<!-- <img src="Images/piccore"> -->
 		</div>
-		<div class="core">
+		<div id="core">
 			<h1>Our Core Values</h1>
 			<ul>
-			   <li>Integrity</li>
-			   <li>Transparency</li>
-			   <li>Innovation</li>
-			   <li>Urgency</li> 
-			   <li>Commitment</li> 
-			   <li>Excellence</li> 
+			<li>Integrity</li>
+			<li>Transparency</li>
+			<li>Innovation</li>
+			<li>Urgency</li> 
+			<li>Commitment</li> 
+			<li>Excellence</li> 
 			</ul>
 		</div>
 	</div>
+
+	<div class="activities">
+		<h1>Our Activities</h1>
+	</div>
+
+	<section class="advert">
+		<div class="girl">
+			<img src="images/girl-edu.jpg">
+			<h1>PROG(Promotion of Girls' Education)</h1>
+			<p>HMI project PROG is a long term continuous project that provides holistic support to poor girls in vulnerable communities. 
+			   Targeted supports covers school fees, uniforms, school bags, writing materials (books, pencils, biro, etc), electronic learning 
+			   devices like computers, teaching resources, such as stationery.</p>
+			<a href="#"><strong>Read more</strong></a>
+		</div>
+		<div class="skill">
+			<img src="images/skill2.jpg">
+			<h1>VOW(Vocational Skills For Rural Women)</h1>
+			<p>Project VOW is training rural women on various vocational skills and gives them technical support in form of advising on best suppliers, best markets, suggesting 
+				innovative activities to avoid market saturation and linking beneficiaries to each other so that they can complement each other's activities.</p>
+			<a href="#"><strong>Read more</strong></a>
+
+		</div>
+		<div class="fyn">
+			<img src="images/fyn.jpg">
+			<h1>Female Youth Network (FYN)</h1>
+			<p>HMI deliberate passion to build and support a community of employable and self-reliant youths. 
+			FYN is growing to emerge as the foremost social hub that harnesses females' inherent potentials and capabilities, 
+			promoting gender equality, promotion of females' leadership development and inclusion, and building females' self-esteem.</p>
+			<a href="#"><strong>Read more</strong></a>
+		</div>
+		<div class="health">
+			<img src="images/health2.jpg">
+
+			<h1>Project HAP (Health Awareness Program)</h1>
+			<p>The goal of Project HAP (Health Awareness Program) is to promote healthy lifestyle amongst families residing in 
+				underserved and vulnerable communities 
+				by delivering sustainable interventions that lead to significant improvements in healthy practices, hygiene and
+				 restoration of dignity.
+			</p>
+			<a href="#"><strong>Read more</strong></a>
+		</div>
+	</section>
+
+	<footer>
+		<div class="footercontainer">
+			<div class="littleabout">
+				<h1>Her Matter Initiative (HMI)</h1>
+				<p>HMI is investing qualitative resources into ensuring that Nigerian women and
+				girls are empowered towards the actualization of the gender angle the UN
+				Sustainable Development Goals (SDGs).</p>
+			</div>
+			<div class="links">
+				<h1>Useful links</h1>
+				<li><a href="#">About us</a></li>
+				<li><a href="#">What we do</a></li>
+				<li><a href="#">Youth</a></li>
+				<li><a href="#">Projects</a></li>
+				<li><a href="#">Impacts</a></li>
+				<li><a href="#">Donate</a></li>
+				<li><a href="#">Take action</a></li>
+				<li><a href="#">News</a></li>
+				<li><a href="#">Blog</a></li>
+			</div>
+			<div class="downlogo">
+				<img src="images/pnglogo2.png">
+			</div>
+			<div class="contact">
+				<h1>Get in touch</h1>
+				<p>Adjacent Handmade Nursery/Primary Sch.,<br>
+				Gbaiko, Bosso, Minna, Niger State,<br>
+				Nigeria.</p><br><br>
+				<p>Tel: 07063856763, 07085181196.</p>
+				<p>Email: hermatterinitiative@gmail.com</p>
+
+			</div>
+		</div>
+		<div class="copy"><p>Copyrights &copy;2019 All rights reserved by Her Matter Initiative(HMI).</p></div>	
+	</footer>
 </body>
 </html>
