hmi website updated

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				</a>
 					<ul class="submenu">
 						<li><a href="girlseducation.html">Girls Education</a></li>
-						<li><a href="#">Health</a></li>
+						<li><a href="health.html">Health</a></li>
 						<li><a href="#">Economic Empowerment</a></li>
 						<li><a href="#">Leadership</a></li>
 						<li><a href="#">Democracy</a></li>
@@ -42,8 +42,8 @@
 				</a>
 					<ul class="submenu">
 						<li><a href="#">PROG(Promotion of Girl Child Education</a></li>
-						<li><a href="#">CODE-ME</a></li>
-						<li><a href="#">HAP(Health Awareness Program)</a></li>
+						<li><a href="codeme.html">CODE-ME</a></li>
+						<li><a href="projecthap.html">HAP(Health Awareness Program)</a></li>
 						<li><a href="#">FLIP(Functional Literacy Program for Young Women)</a></li>
 					</ul>
 				</li>
@@ -141,7 +141,7 @@
 			<p>HMI project PROG is a long term continuous project that provides holistic support to poor girls in vulnerable communities. 
 			   Targeted supports covers school fees, uniforms, school bags, writing materials (books, pencils, biro, etc), electronic learning 
 			   devices like computers, teaching resources, such as stationery.</p>
-			<a href="#"><strong>Read more</strong></a>
+			<a href="projectprog.html"><strong>Read more</strong></a>
 		</div>
 		<div class="skill">
 			<img src="images/skill2.jpg">
@@ -157,7 +157,7 @@
 			<p>HMI deliberate passion to build and support a community of employable and self-reliant youths. 
 			FYN is growing to emerge as the foremost social hub that harnesses females' inherent potentials and capabilities, 
 			promoting gender equality, promotion of females' leadership development and inclusion, and building females' self-esteem.</p>
-			<a href="#"><strong>Read more</strong></a>
+			<a href="fyn.html"><strong>Read more</strong></a>
 		</div>
 		<div class="health">
 			<img src="images/health2.jpg">
@@ -168,7 +168,7 @@
 				by delivering sustainable interventions that lead to significant improvements in healthy practices, hygiene and
 				 restoration of dignity.
 			</p>
-			<a href="#"><strong>Read more</strong></a>
+			<a href="projecthap.html"><strong>Read more</strong></a>
 		</div>
 	</section>
 
