--- a/fyn.html
+++ b/fyn.html
@@ -29,7 +29,7 @@
 				</a>
 					<ul class="submenu">
 						<li><a href="girlseducation.html">Girls Education</a></li>
-						<li><a href="#">Health</a></li>
+						<li><a href="health.html">Health</a></li>
 						<li><a href="#">Economic Empowerment</a></li>
 						<li><a href="#">Leadership</a></li>
 						<li><a href="#">Democracy</a></li>
@@ -41,9 +41,9 @@
 					<span class="arrow">&#x25BC;</span>
 				</a>
 					<ul class="submenu">
-						<li><a href="#">PROG(Promotion of Girl Child Education</a></li>
-						<li><a href="#">CODE-ME</a></li>
-						<li><a href="#">HAP(Health Awareness Program)</a></li>
+						<li><a href="projectprog.html">PROG(Promotion of Girl Child Education</a></li>
+						<li><a href="codeme.html">CODE-ME</a></li>
+						<li><a href="projecthap.html">HAP(Health Awareness Program)</a></li>
 						<li><a href="#">FLIP(Functional Literacy Program for Young Women)</a></li>
 					</ul>
 				</li>
