--- a/health.html
+++ b/health.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Impacts-Her Matter Initiative(HMI)</title>
+	<title>Health-HMI</title>
 	<meta name="description" content="HMI is a Non-Profit Organization that focuses on promoting Equal opportunities, access to education and healthcare, Leadership advancement and self-reliance for women and girls in Nigeria.">
   	<meta name="keywords" content="Women and Girls NGO in Niger State, Youth Organization in Niger State, Girls education in Niger State, Women and girls empowerment in Niger State, Women and Girls NGO in Nigeria, Youth Organization in Nigeria, Girls education in Nigeria, Women and girls empowerment in Nigeria">
   	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="css/hapimpacts.css">
+	<link rel="stylesheet" type="text/css" href="css/health.css">
 </head>
 <body>
 	<header>
@@ -14,7 +14,7 @@
 	</header> 
 		<nav id="hminav">
 			<ul>
-				<li><a href="#">About
+				<li><a href="index.html">About
 					<span class="arrow">&#x25BC;</span>
 				</a>
 					<ul class="submenu">
@@ -29,7 +29,7 @@
 				</a>
 					<ul class="submenu">
 						<li><a href="girlseducation.html">Girls Education</a></li>
-						<li><a href="#">Health</a></li>
+						<li><a href="health.html">Health</a></li>
 						<li><a href="#">Economic Empowerment</a></li>
 						<li><a href="#">Leadership</a></li>
 						<li><a href="#">Democracy</a></li>
@@ -42,12 +42,12 @@
 				</a>
 					<ul class="submenu">
 						<li><a href="projectprog.html">PROG(Promotion of Girl Child Education</a></li>
-						<li><a href="#">CODE-ME</a></li>
-						<li><a href="#">HAP(Health Awareness Program)</a></li>
+						<li><a href="codeme.html">CODE-ME</a></li>
+						<li><a href="projecthap.html">HAP(Health Awareness Program)</a></li>
 						<li><a href="#">FLIP(Functional Literacy Program for Young Women)</a></li>
 					</ul>
 				</li>
-				<li><a href="#">Impacts</a></li>
+				<li><a href="hapimpacts.html">Impacts</a></li>
 				<li><a href="#">Take Action
 					<span class="arrow">&#x25BC;</span>
 				</a>
@@ -57,14 +57,13 @@
 						<li><a href="#">Volunteer</a></li>
 					</ul>
 				</li>
-				<li><a href="#">Donate</a></li>
+				<li><a href="donate.html">Donate</a></li>
 				<li><a href="#">News</a></li>
 				<li><a href="#">Blog</a></li>
 			</ul>
 		</nav>
-	<div class="hap">
-		<img src="images/hapimpacts.jpg" alt="hap">;
-		<img src="images/prog.jpg" alt="prog">;
+	<div class="communityhealth">
+		<img src="images/communityhealth.jpg" alt="prog">
 
     </div>
 	<footer>
